@@ -3,14 +3,14 @@ from django.contrib.auth.models import Group
 from django.contrib.auth.admin import UserAdmin as BaseUserAdmin
 
 
-from .forms import StudentAdminCreationForm, StudentAdminChangeForm
+from .forms import StudentAdminCreationForm, StudentAdminChangeForm, ProfessorAdminChangeForm, ProfessorAdminCreationForm
 from .models import User, Student, Professor
 
 
 class UserAdmin(BaseUserAdmin):
     # The forms to add and change user instances
-    form = StudentAdminChangeForm
-    add_form = StudentAdminCreationForm
+    form = None
+    add_form = None
 
     # The fields to be used in displaying the User model.
     # These override the definitions on the base UserAdmin
@@ -27,7 +27,7 @@ class UserAdmin(BaseUserAdmin):
     add_fieldsets = (
         (None, {
             'classes': ('wide',),
-            'fields': ('email', 'password1', 'password2', 'first_name', 'last_name', 'courses', 'role')}
+            'fields': ('email', 'password1', 'password2', 'first_name', 'last_name', 'role')}
         ),
     )
     search_fields = ('email',)
@@ -35,6 +35,17 @@ class UserAdmin(BaseUserAdmin):
     filter_horizontal = ()
 
 
-admin.site.register(Student, UserAdmin)
+class StudentAdmin(UserAdmin):
+    form = StudentAdminChangeForm
+    add_form = StudentAdminCreationForm
+
+
+class ProfAdmin(UserAdmin):
+    form = ProfessorAdminChangeForm
+    add_form = ProfessorAdminCreationForm
+
+
+admin.site.register(Student, StudentAdmin)
+admin.site.register(Professor, ProfAdmin)
 admin.site.unregister(Group)
 # Register your models here.
