@@ -28,6 +28,51 @@ class RegisterForm(forms.ModelForm):
         return password2
 
 
+class ProfessorAdminCreationForm(forms.ModelForm):
+    """A form for creating new users. Includes all the required
+    fields, plus a repeated password."""
+    password1 = forms.CharField(label='Password', widget=forms.PasswordInput)
+    password2 = forms.CharField(label='Password confirmation', widget=forms.PasswordInput)
+
+    class Meta:
+        model = Student
+        fields = ('email', )
+
+    def clean_password2(self):
+        # Check that the two password entries match
+        password1 = self.cleaned_data.get("password1")
+        password2 = self.cleaned_data.get("password2")
+        if password1 and password2 and password1 != password2:
+            raise forms.ValidationError("Passwords don't match")
+        return password2
+
+    def save(self, commit=True):
+        # Save the provided password in hashed format
+        user = super(ProfessorAdminCreationForm, self).save(commit=False)
+        user.set_password(self.cleaned_data["password1"])
+        if commit:
+            user.save()
+        return user
+
+
+class ProfessorAdminChangeForm(forms.ModelForm):
+    """A form for updating users. Includes all the fields on
+    the user, but replaces the password field with admin's
+    password hash display field.
+    """
+    password = ReadOnlyPasswordHashField()
+
+    class Meta:
+        model = Student
+        fields = ('email', 'password', 'courses', 'active', 'admin')
+
+    def clean_password(self):
+        # Regardless of what the user provides, return the initial value.
+        # This is done here, rather than on the field, because the
+        # field does not have access to the initial value
+        return self.initial["password"]
+
+
 class StudentAdminCreationForm(forms.ModelForm):
     """A form for creating new users. Includes all the required
     fields, plus a repeated password."""
@@ -36,7 +81,7 @@ class StudentAdminCreationForm(forms.ModelForm):
 
     class Meta:
         model = Student
-        fields = ('email', 'courses')
+        fields = ('email', )
 
     def clean_password2(self):
         # Check that the two password entries match
@@ -64,7 +109,7 @@ class StudentAdminChangeForm(forms.ModelForm):
 
     class Meta:
         model = Student
-        fields = ('email', 'password', 'active', 'admin')
+        fields = ('email', 'password', 'courses', 'active')
 
     def clean_password(self):
         # Regardless of what the user provides, return the initial value.
