@@ -1,1 +1,16 @@
 {% extends 'base.html' %}
+
+{% block content %}
+
+    <ul>
+
+{% for course in user.courses.all %}
+
+        <li><a>{{ course.course_name }}</a>></li>
+
+{%  endfor %}
+
+    </ul>
+
+
+{% endblock content %}
